samples/_failures_safe/1761790855_5d4ab1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27394ec4.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_27394ec4.c:196:25: error: missing terminating " character
  196 |         default: return "
      |                         ^
./samples/SAFE/__tmp_27394ec4.c:196:9: error: expected expression at end of input
  196 |         default: return "
      |         ^~~~~~~
./samples/SAFE/__tmp_27394ec4.c:196:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27394ec4.c:196:9: error: expected declaration or statement at end of input
